feat: update package.json, add test-map

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,14 @@
 @import './base.css';
 
+
 #app {
   font-weight: normal;
+}
+
+#map-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 a,
